--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -6,7 +6,7 @@
  
  foreach(var item in items)
     {
-        <p>item.Value<string>("slideTitle")</p>
+       @* <p>item.Value<string>("slideTitle")</p>*@
     }
 
 }
