--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -2,7 +2,7 @@
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
 	Layout = null;
-	var items = Model.Value<IEnumerable<IPublishedElement>>("carouselSlide");
+	var items = Model.Value<IEnumerable<IPublishedElement>>("bannerItems");
  
  foreach(var item in items)
     {
