--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -6,7 +6,7 @@
  
  foreach(var item in items)
     {
-        item.Value<string>("slideTitle")
+         string title = slide.GetPropertyValue<string>("slideTitle");
     }
 
 }
