--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -6,7 +6,7 @@
  
  foreach(var item in items)
     {
-         string title = item.GetPropertyValue<string>("slideTitle");
+         item.Value<string>("slideTitle");
     }
 
 }
