--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -3,7 +3,9 @@
 @{
 	Layout = null;
 	var items = Model.Value<IEnumerable<IPublishedElement>>("bannerItems");
- 
+	string title = slide.GetPropertyValue<string>("slideTitle");
+
+        
  foreach(var item in items)
     {
          <p>item.Value<string>("slideTitle")</p>;
