Adding template 'Banner'

--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -8,6 +8,7 @@
  foreach(var item in items)
     {
          string title = slide.GetPropertyValue<string>("slideTitle");
+         <h1 class="hero-title">@title</h1>
     }
 
 }
