Adding template 'Banner'

--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -7,7 +7,7 @@
         
  foreach(var item in items)
     {
-         string title = slide.GetPropertyValue<string>("slideTitle");
+         string title = item.GetPropertyValue<string>("slideTitle");
          <h1 class="hero-title">@title</h1>
     }
 
