--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -14,6 +14,7 @@
         RelatedLink link = links != null ? links.FirstOrDefault() : null;
 
          <h1 class="hero-title">@title</h1>
+         <h1 class="hero-title">@subtitle</h1>
     }
 
 }
