--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -7,10 +7,10 @@
         
  foreach(var item in items)
     {
-        string title = slide.GetPropertyValue<string>("slideTitle");
-        string subtitle = slide.HasValue("slideSubtitle") ? slide.GetPropertyValue<string>("slideSubtitle") : "";
-        string imageUrl = slide.HasValue("slideImage") ? slide.GetPropertyValue<IPublishedContent>("slideImage").Url : "/img/carousel.jpg";
-        IEnumerable<RelatedLink> links = slide.GetPropertyValue<IEnumerable<RelatedLink>>("slideLink");
+        string title = item.GetPropertyValue<string>("slideTitle");
+        string subtitle = item.HasValue("slideSubtitle") ? item.GetPropertyValue<string>("slideSubtitle") : "";
+        string imageUrl = item.HasValue("slideImage") ? item.GetPropertyValue<IPublishedContent>("slideImage").Url : "/img/carousel.jpg";
+        IEnumerable<RelatedLink> links = item.GetPropertyValue<IEnumerable<RelatedLink>>("slideLink");
         RelatedLink link = links != null ? links.FirstOrDefault() : null;
 
          <h1 class="hero-title">@title</h1>
