--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -9,9 +9,9 @@
     {
         string title = item.GetPropertyValue<string>("slideTitle");
         string subtitle = item.HasValue("slideSubtitle") ? item.GetPropertyValue<string>("slideSubtitle") : "";
-        string imageUrl = item.HasValue("slideImage") ? item.GetPropertyValue<IPublishedContent>("slideImage").Url : "/img/carousel.jpg";
+        @*string imageUrl = item.HasValue("slideImage") ? item.GetPropertyValue<IPublishedContent>("slideImage").Url : "/img/carousel.jpg";
         IEnumerable<RelatedLink> links = item.GetPropertyValue<IEnumerable<RelatedLink>>("slideLink");
-        RelatedLink link = links != null ? links.FirstOrDefault() : null;
+        RelatedLink link = links != null ? links.FirstOrDefault() : null;*@
 
          <h1 class="hero-title">@title</h1>
          <h1 class="hero-title">@subtitle</h1>
