--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -8,7 +8,7 @@
  foreach(var item in items)
     {
         string title = item.GetPropertyValue<string>("slideTitle");
-        string subtitle = @Html.Raw(item.GetPropertyValue("slideSubtitle")).ToString();
+        string subtitle = Html.Raw(item.GetPropertyValue("slideSubtitle")).ToString();
         @*string imageUrl = item.HasValue("slideImage") ? item.GetPropertyValue<IPublishedContent>("slideImage").Url : "/img/carousel.jpg";
         IEnumerable<RelatedLink> links = item.GetPropertyValue<IEnumerable<RelatedLink>>("slideLink");
         RelatedLink link = links != null ? links.FirstOrDefault() : null;*@
