Adding template 'Banner'

--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -13,6 +13,7 @@
         IEnumerable<RelatedLink> links = item.GetPropertyValue<IEnumerable<RelatedLink>>("slideLink");
         RelatedLink link = links != null ? links.FirstOrDefault() : null;*@
 
+         <h1 class="hero-title">@title</h1>
     }
 
 }
