Adding template 'Banner'

--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -9,6 +9,7 @@
     {
          string title = item.Value<string>("slideTitle");
          string subtitle = item.Value<string>("slideSubtitle");
+         string LinkImage = item.Value<string>("slideImage");
          <h1 class="hero-title">@title</h1>
          <h1 class="hero-title">@subtitle</h1>
     }
