Adding template 'Banner'

--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -13,7 +13,7 @@
          
          <h1 class="hero-title">@title</h1>
          <h1 class="hero-title">@subtitle</h1>
-         <img src="@LinkImagel" height="300" width="374" srcset="" class="blog-image">
+         <img src="@LinkImage" height="300" width="374" srcset="" class="blog-image">
     }
 
 }
