--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -13,7 +13,7 @@
          
          <h1 class="hero-title">@title</h1>
          <h1 class="hero-title">@subtitle</h1>
-         <img src="@Image" height="300" width="374" srcset="" class="">
+         <img src=@Image height="300" width="374" srcset="" class="">
     }
 
 }
