--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -15,6 +15,9 @@
          <h1 class="hero-title">@title</h1>
          <h1 class="hero-title">@subtitle</h1>
          <img src=@Image.Url height="300" width="374" srcset="" class="">
+         <li> 
+             <a class="nav-link dropdown-toogle @(item.IsAncestorOrSelf(Model) ? "nav-link--active" : null)" href="@link.Url">@Link.Name</a>
+         </li>
     }
 
 }
