Adding template 'Banner'

--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -16,7 +16,7 @@
          <h1 class="hero-title">@subtitle</h1>
          <img src=@Image.Url height="300" width="374" srcset="" class="">
          <li> 
-             <a class="nav-link dropdown-toogle" href="@Link.Url">@Link.Name</a>
+             <a href="@Link.Url">@Link.Name</a>
          </li>
     }
 
