Adding template 'Banner'

--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -3,6 +3,7 @@
 @{
 	Layout = null;
 	var items = Model.Value<IEnumerable<IPublishedElement>>("bannerItems");
+	var links = Model.Value<IEnumerable<IPublishedElement>>("slideLinks");
 
         
  foreach(var item in items)
