--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -3,15 +3,14 @@
 @{
 	Layout = null;
 	var items = Model.Value<IEnumerable<IPublishedElement>>("bannerItems");
-	var links = Model.Value<IEnumerable<IPublishedElement>>("slideLinks");
-
+	
         
  foreach(var item in items)
     {
          var title = item.Value<string>("slideTitle");
          var subtitle = item.Value<string>("slideSubtitle");
          var Image = item.Value<IPublishedContent>("slideImage");
-         var Link = item.Value<IPublishedContent>("slideLink");
+         var Link = item.Value<IPublishedElement>("slideLink");
          
          <h1 class="hero-title">@title</h1>
          <h1 class="hero-title">@subtitle</h1>
