--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -18,7 +18,7 @@
          @*<li> 
              <a href="@Link.Url">@Link.Name</a>
          </li>*@
-         @item.Value
+         <p>@item.Value</p>
     }
 
 }
