Adding template 'Banner'

--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -15,7 +15,7 @@
          <h1 class="hero-title">@title</h1>
          <h1 class="hero-title">@subtitle</h1>
          <img src=@Image.Url height="300" width="374" srcset="" class="">
-         <li><a href="@link.Url" target="@link.Target">@link.Name</a></li>
+         <li><a href="@Link.Url" target="@Link.Target">@Link.Name</a></li>
          @*<li> 
              <a href="@Link.Url">@Link.Name</a>
          </li>*@
