Adding template 'Banner'

--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -11,7 +11,7 @@
          var title = item.Value<string>("slideTitle");
          var subtitle = item.Value<string>("slideSubtitle");
          var Image = item.Value<IPublishedContent>("slideImage");
-         var Link = item.Value<link>("relatedLinks");
+         var Link = item.Value<Link>("relatedLinks");
          
          <h1 class="hero-title">@title</h1>
          <h1 class="hero-title">@subtitle</h1>
