Adding partial-view '_MainCarousel.cshtml'

--- a/Views/Partials/Navigation/_MainCarousel.cshtml
+++ b/Views/Partials/Navigation/_MainCarousel.cshtml
@@ -1,4 +1,4 @@
-﻿@inherits UmbracoViewPage
+﻿@*@inherits UmbracoViewPage
 @using ContentModels = Umbraco.Web.PublishedModels;
 
 @using Umbraco.Web.Models
@@ -53,4 +53,4 @@
             }
         </ol>
     </div>
-}
+}*@
