--- a/Views/Partials/BlockList/session.cshtml
+++ b/Views/Partials/BlockList/session.cshtml
@@ -1,7 +1,7 @@
 ﻿@inherits UmbracoViewPage<Umbraco.Core.Models.Blocks.BlockListItem>
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
-    var eventDate = (ContentModels.test2)Model.Content;
+    var eventDate = (ContentModels.teste2)Model.Content;
 }
 @*
 <div class="col-md-6">
