Adding template 'Session'

--- a/Views/Session.cshtml
+++ b/Views/Session.cshtml
@@ -1,4 +1,4 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.Session1>
+﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.teste2>
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
 	Layout = null;
