Adding template 'Mario2'

--- a/Views/Mario2.cshtml
+++ b/Views/Mario2.cshtml
@@ -24,7 +24,7 @@
     </header>
 
     <main>
-        @Html.GetBlockListHtml(Model, "MyBlocks")
+        @Html.GetBlockListHtml(Model, "Hhbj")
     </main>
     
         <div>
