Adding template 'Mario2'

--- a/Views/Mario2.cshtml
+++ b/Views/Mario2.cshtml
@@ -25,6 +25,8 @@
 
     <main>
         @Html.GetBlockListHtml(Model, "Hhbj")
+        
+        @Html.Partial("MarioPartialView1")
     </main>
     
         <div>
