--- a/Views/Mario2.cshtml
+++ b/Views/Mario2.cshtml
@@ -25,8 +25,9 @@
 
     <main>
         @Html.GetBlockListHtml(Model, "Hhbj")
-        
+        AAAAA
         @Html.Partial("MarioPartialView1")
+        BBBB
     </main>
     
         <div>
