Adding partial-view 'MarioPartialView1.cshtml'

--- a/Views/Partials/MarioPartialView1.cshtml
+++ b/Views/Partials/MarioPartialView1.cshtml
@@ -3,7 +3,7 @@
     <div class="section__hero-content">
         <h1 class="no-air">SOU UMA PARTIAL VIEW</h1>
 @{
-    Model.GetPropertyValue<string>("Prop1Mario1");
+    Model.Prop1Mario1;
 }
     </div>
 </section>
