--- a/Views/Mario1.cshtml
+++ b/Views/Mario1.cshtml
@@ -4,4 +4,8 @@
 	Layout = null;
 }
 
-@Html.Partial("MarioPartialView1")
+@Html.Partial("MarioPartialView1", Model.Content, new ViewDataDictionary(this.ViewData) {
+            { "param1", "something" },
+            { "param2", true }
+        }
+    );
