Adding partial-view 'MarioPartialView1.cshtml'

--- a/Views/Partials/MarioPartialView1.cshtml
+++ b/Views/Partials/MarioPartialView1.cshtml
@@ -3,7 +3,8 @@
     <div class="section__hero-content">
         <h1 class="no-air">SOU UMA PARTIAL VIEW</h1>
 @{
-    Model.Prop1Mario1;
+var param1 = (string)ViewData["param1"];
+var param2 =  (bool)ViewData["param2"];
 }
     </div>
 </section>
