Adding template 'Mario1'

--- a/Views/Mario1.cshtml
+++ b/Views/Mario1.cshtml
@@ -5,7 +5,7 @@
 }
 
 @Html.Partial("MarioPartialView1", new ViewDataDictionary(this.ViewData) {
-            { "param1", "something" },
+            { "param1", "param1" },
             { "param2", true }
         }
     )
