--- a/Views/Partials/MarioPartialView2.cshtml
+++ b/Views/Partials/MarioPartialView2.cshtml
@@ -1,7 +1,7 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage
 <section style="background-color:red" class="section section--themed section--header section--content-center-bottom">
     <div class="section__hero-content">
-        <h1 class="no-air">SOU UMA PARTIAL VIEW</h1>
+        <h1 class="no-air">SOU UMA PARTIAL VIEW2</h1>
 @{
 var param1 = @param1;
 }
