Adding template 'Mario1'

--- a/Views/Mario1.cshtml
+++ b/Views/Mario1.cshtml
@@ -1,6 +1,5 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.Mario1>
+﻿@model Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.Mario1>
 @using ContentModels = Umbraco.Web.PublishedModels;
-@model Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.Mario1>
 @{
 	Layout = null;
 }
