Adding template 'Mario1'

--- a/Views/Mario1.cshtml
+++ b/Views/Mario1.cshtml
@@ -1,4 +1,4 @@
-﻿@model Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.Mario1>
+﻿@Model Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.Mario1>
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
 	Layout = null;
@@ -10,4 +10,4 @@
         }
     )
     
-@Html.Partial("MarioPartialView2", model)
+@Html.Partial("MarioPartialView2", Model)
