Adding template 'Mario1'

--- a/Views/Mario1.cshtml
+++ b/Views/Mario1.cshtml
@@ -1,4 +1,4 @@
-﻿@Model Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.Mario1>
+﻿@Model Umbraco.Web.Mvc.UmbracoViewPage<IPublishedContent>
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
 	Layout = null;
