--- a/Views/Mario1.cshtml
+++ b/Views/Mario1.cshtml
@@ -1,4 +1,4 @@
-﻿@Model Umbraco.Web.Mvc.UmbracoViewPage<IPublishedContent>
+﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.MarioHome>
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
 	Layout = null;
