--- a/Views/Mario1.cshtml
+++ b/Views/Mario1.cshtml
@@ -1,4 +1,4 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.MarioHome>
+﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.Mario1>
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
 	Layout = null;
@@ -10,3 +10,4 @@
         }
     )
     
+@Html.Partial("MarioPartialView2", Model)
