Adding template 'Mario1'

--- a/Views/Mario1.cshtml
+++ b/Views/Mario1.cshtml
@@ -1,4 +1,4 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.Mario1>
+﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
 	Layout = null;
