--- a/Views/Partials/MarioPartialView2.cshtml
+++ b/Views/Partials/MarioPartialView2.cshtml
@@ -1,4 +1,5 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<IPublishedContent>
+﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.Mario1>
+
 <section style="background-color:red" class="section section--themed section--header section--content-center-bottom">
     <div class="section__hero-content">
         <h1 class="no-air">SOU UMA PARTIAL VIEW2</h1>
