Adding partial-view 'MarioPartialView2.cshtml'

--- a/Views/Partials/MarioPartialView2.cshtml
+++ b/Views/Partials/MarioPartialView2.cshtml
@@ -1,7 +1,10 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.Mario1>
+﻿@inherits Umbraco.Web.Mvc.UmbracoTemplatePage
+
 
 <section style="background-color:red" class="section section--themed section--header section--content-center-bottom">
     <div class="section__hero-content">
         <h1 class="no-air">SOU UMA PARTIAL VIEW2</h1>
     </div>
 </section>
+
+
