--- a/Views/Partials/MarioPartialView2.cshtml
+++ b/Views/Partials/MarioPartialView2.cshtml
@@ -1,4 +1,4 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoTemplatePage
+﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.Mario1>
 
 
 <section style="background-color:red" class="section section--themed section--header section--content-center-bottom">
