Adding partial-view 'MarioPartialView2.cshtml'

--- a/Views/Partials/MarioPartialView2.cshtml
+++ b/Views/Partials/MarioPartialView2.cshtml
@@ -1,4 +1,6 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage
+﻿
+@inherits Umbraco.Web.Mvc.UmbracoViewPage<Mario1>
+
 
 
 <section style="background-color:red" class="section section--themed section--header section--content-center-bottom">
