Adding partial-view 'BlockListDocumentType.cshtml'

--- a/Views/Partials/BlockListDocumentType.cshtml
+++ b/Views/Partials/BlockListDocumentType.cshtml
@@ -1,4 +1,4 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<Home>
+﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<BlockListDocumentType>
 @using Umbraco.Core.Models.Blocks;
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
