Adding template 'BlockList'

--- a/Views/BlockList1.cshtml
+++ b/Views/BlockList1.cshtml
@@ -19,6 +19,10 @@
              @Html.Partial("~/Views/Partials/BlockList/Components/block2.cshtml",block)
             break;
             
+            case "Umbraco.Web.PublishedModels.Block3":
+             @Html.Partial("~/Views/Partials/BlockList/Components/block2.cshtml",block)
+            break;
+            
         }
     }
 }
