Adding partial-view 'block3.cshtml'

--- a/Views/Partials/BlockList/Components/block3.cshtml
+++ b/Views/Partials/BlockList/Components/block3.cshtml
@@ -3,5 +3,7 @@
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
     var content = (ContentModels.Block3)Model.Content;
+    
+    <h1>@content.Value("Footer")</h1>
 
 }
