--- a/Views/Partials/BlockList/Components/block3.cshtml
+++ b/Views/Partials/BlockList/Components/block3.cshtml
@@ -4,6 +4,6 @@
 @{
     var content = (ContentModels.Block3)Model.Content;
     
-    <h1>@content.Value("Text")</h1>
+@*    <h1>@content.Value("Text")</h1>*@
 
 }
