Adding partial-view 'block3.cshtml'

--- a/Views/Partials/BlockList/Components/block3.cshtml
+++ b/Views/Partials/BlockList/Components/block3.cshtml
@@ -7,5 +7,20 @@
     <h1>@content.Value("Text")</h1>
     
     @content
+    
+    @if (Model.FeaturedProducts != null)
+            {
+                foreach (Product product in Model.FeaturedProducts)
+                {
+                <p>@product.ProductName</p>  
+                <p>@Model.DefaultCurrency @product.Price.ToString("F")</p> 
+                    <a href="@product.Url" class="product-grid__item" style="background-image: url('@product.Photos.Url')">
+                        <div class="product-grid__item__overlay">
+                            <div class="product-grid__item__name">@product.ProductName</div>
+                            <div class="product-grid__item__price">@Model.DefaultCurrency @product.Price.ToString("F")</div>
+                        </div>
+                    </a>
+                }
+            }
 
 }
