--- a/Views/Partials/BlockList/Components/block3.cshtml
+++ b/Views/Partials/BlockList/Components/block3.cshtml
@@ -8,7 +8,7 @@
     
     @content
     
-    @if (Model.FeaturedProducts != null)
+    @if (Model.ProductsTreePicker != null)
             {
                 foreach (Product product in Model.FeaturedProducts)
                 {
