Adding partial-view 'block3.cshtml'

--- a/Views/Partials/BlockList/Components/block3.cshtml
+++ b/Views/Partials/BlockList/Components/block3.cshtml
@@ -1,8 +1,6 @@
-﻿@inherits UmbracoViewPage<Product>
+﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<BlockListItem>
+@using Umbraco.Core.Models.Blocks;
 @using ContentModels = Umbraco.Web.PublishedModels;
-@{
-    Layout = null;
-}
 @{
     var content = (ContentModels.Block3)Model.Content;
     
