Adding partial-view 'block3.cshtml'

--- a/Views/Partials/BlockList/Components/block3.cshtml
+++ b/Views/Partials/BlockList/Components/block3.cshtml
@@ -10,7 +10,7 @@
     
     @content
     
-     foreach (product in Model.ProductsTreePicker)
+     foreach (var product in Model.ProductsTreePicker)
                 {
                 <p>@product.ProductName</p>  
                 <p>@Model.DefaultCurrency @product.Price.ToString("F")</p> 
