Adding partial-view 'block3.cshtml'

--- a/Views/Partials/BlockList/Components/block3.cshtml
+++ b/Views/Partials/BlockList/Components/block3.cshtml
@@ -12,8 +12,7 @@
     
      foreach (var product in Model.ProductsTreePicker)
                 {
-                <p>@product.ProductName</p>  
-                <p>@Model.DefaultCurrency @product.Price.ToString("F")</p> 
+                <p>@product</p>
                 }
    
    @*
