--- a/Views/Partials/BlockList/Components/block3.cshtml
+++ b/Views/Partials/BlockList/Components/block3.cshtml
@@ -11,7 +11,7 @@
     
     @content
     
-     foreach (var product in Model.ProductsTreePicker)
+     foreach (var product in Model.content)
                 {
                 <p>@product</p>
                 }
