Adding partial-view 'block3.cshtml'

--- a/Views/Partials/BlockList/Components/block3.cshtml
+++ b/Views/Partials/BlockList/Components/block3.cshtml
@@ -11,7 +11,7 @@
     
     @content
     
-     foreach (var product in Model.content)
+     foreach (var product in @content)
                 {
                 <p>@product</p>
                 }
