Adding template 'Example'

--- a/Views/Example.cshtml
+++ b/Views/Example.cshtml
@@ -1,4 +1,4 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.Example>
+﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.Product>
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
 	Layout = null;
