Adding partial-view 'block3.cshtml'

--- a/Views/Partials/BlockList/Components/block3.cshtml
+++ b/Views/Partials/BlockList/Components/block3.cshtml
@@ -9,7 +9,13 @@
     
     <h1>@content.Value("Text")</h1>
     
-    @content
+    var teste = content.Value("ProductsTreePicker");
+    
+    
+    foreach (Product product in content)
+    {
+    
+    }
     
    @*
     
