Adding partial-view 'block3.cshtml'

--- a/Views/Partials/BlockList/Components/block3.cshtml
+++ b/Views/Partials/BlockList/Components/block3.cshtml
@@ -12,6 +12,8 @@
     var teste = content.Value("ProductsTreePicker");
     
     
+    <p>@teste</p>
+    
    @*
     
     if (Model.ProductsTreePicker != null)
