Adding partial-view 'block3.cshtml'

--- a/Views/Partials/BlockList/Components/block3.cshtml
+++ b/Views/Partials/BlockList/Components/block3.cshtml
@@ -7,7 +7,7 @@
 @{
     var content = (ContentModels.Block3)Model.Content;
     
-    <h1>@content.Value("tituloProduto")</h1>
+    <h1>@content.Value("Text")</h1>
     
     var teste = content.Value("ProductsTreePicker");
     
