Adding partial-view 'block3.cshtml'

--- a/Views/Partials/BlockList/Components/block3.cshtml
+++ b/Views/Partials/BlockList/Components/block3.cshtml
@@ -5,11 +5,7 @@
     Layout = null;
 }
 @{
-    var content = (ContentModels.Block3)Model.Content;
-    
-    <h1>@content.Value("tituloProduto")</h1>
-    
-    <h1>@content.Value("ProductsTreePicker")</h1>
+  @Model
     
 
    @*
