--- a/Views/Partials/BlockList/Components/block3.cshtml
+++ b/Views/Partials/BlockList/Components/block3.cshtml
@@ -1,2 +1,9 @@
 ﻿@inherits UmbracoViewPage<Product>
 @using ContentModels = Umbraco.Web.PublishedModels;
+@{
+    var content = (ContentModels.Block2)Model.Content;
+
+<h1>@content.Value("TituloProduto")</h1>
+    
+
+}
