--- a/Views/Partials/BlockList/Components/block3.cshtml
+++ b/Views/Partials/BlockList/Components/block3.cshtml
@@ -3,7 +3,7 @@
 @{
     var content = (ContentModels.Block2)Model.Content;
 
-<h1>@content.Value("TituloProduto")</h1>
+<h1>@content.Value("tituloProduto")</h1>
     
 
 }
