Adding partial-view 'block3.cshtml'

--- a/Views/Partials/BlockList/Components/block3.cshtml
+++ b/Views/Partials/BlockList/Components/block3.cshtml
@@ -4,6 +4,20 @@
     var content = (ContentModels.Block3)Model.Content;
 
 <h1>@content.Value("TituloProduto")</h1>
+
+
+      @if (Model.FeaturedProducts != null)
+            {
+                foreach (Product product in Model.FeaturedProducts)
+                {
+                    <a href="@product.Url" class="product-grid__item" style="background-image: url('@product.Photos.Url')">
+                        <div class="product-grid__item__overlay">
+                            <div class="product-grid__item__name">@product.ProductName</div>
+                            <div class="product-grid__item__price">@Model.DefaultCurrency @product.Price.ToString("F")</div>
+                        </div>
+                    </a>
+                }
+            }
     
 
 }
