--- a/Views/Partials/BlockList/Components/block3.cshtml
+++ b/Views/Partials/BlockList/Components/block3.cshtml
@@ -2,9 +2,9 @@
 @using Umbraco.Core.Models.Blocks;
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
+    var content = (ContentModels.Block3)Model.Content;
 
 <h1>@content.Value("TituloProduto")</h1>
-
     
 
 }
