--- a/Views/Partials/BlockList/Components/block3.cshtml
+++ b/Views/Partials/BlockList/Components/block3.cshtml
@@ -6,6 +6,6 @@
 
     <h1>@content.Value("TituloProduto")</h1>
     
-    var featuredproduct = content.Value("ProductsTreePicker")
+    var featuredproduct = content.Value("ProductsTreePicker");
 
 }
