--- a/Views/Partials/BlockList/Components/block3.cshtml
+++ b/Views/Partials/BlockList/Components/block3.cshtml
@@ -7,5 +7,8 @@
     <h1>@content.Value("TituloProduto")</h1>
     
     var featuredproduct = content.Value("ProductsTreePicker");
+    
+    
+    <h1>featuredproduct</h1>
 
 }
