Adding partial-view 'block3.cshtml'

--- a/Views/Partials/BlockList/Components/block3.cshtml
+++ b/Views/Partials/BlockList/Components/block3.cshtml
@@ -9,6 +9,6 @@
     var featuredproduct = content.Value("ProductsTreePicker");
     
     
-    <h1>featuredproduct</h1>
+    <h1>@featuredproduct</h1>
 
 }
