Adding partial-view 'BlockListDocumentType.cshtml'

--- a/Views/Partials/BlockListDocumentType.cshtml
+++ b/Views/Partials/BlockListDocumentType.cshtml
@@ -20,6 +20,9 @@
             break;
             
             case "Umbraco.Web.PublishedModels.Block3":
+            
+            <p>@Content.TituloProduto</p>
+            
              @Html.Partial("~/Views/Partials/BlockList/Components/block3.cshtml",block)
             break;
             
