Adding partial-view 'BlockListDocumentType.cshtml'

--- a/Views/Partials/BlockListDocumentType.cshtml
+++ b/Views/Partials/BlockListDocumentType.cshtml
@@ -21,7 +21,7 @@
             
             case "Umbraco.Web.PublishedModels.Block3":
             
-            <p>@Content.TituloProduto</p>
+            var contentBlock3 = (ContentModels.Block3)Model.Content;
             
              @Html.Partial("~/Views/Partials/BlockList/Components/block3.cshtml",block)
             break;
