--- a/Views/Partials/BlockListDocumentType.cshtml
+++ b/Views/Partials/BlockListDocumentType.cshtml
@@ -22,6 +22,7 @@
             case "Umbraco.Web.PublishedModels.Block3":
             
             var contentBlock3 = (ContentModels.Block3)Model.Content;
+            <h1>@contentBlock3.Value("TituloProduto")</h1>
             
              @Html.Partial("~/Views/Partials/BlockList/Components/block3.cshtml",block)
             break;
