Adding template 'Mario3'

--- a/Views/Mario3.cshtml
+++ b/Views/Mario3.cshtml
@@ -20,7 +20,7 @@
         </nav>
         -->
         <div class="product-grid">
-            @if (Model.FeaturedProducts != null)
+            @if (Model.Produtos != null)
             {
                 foreach (Product product in Model.FeaturedProducts)
                 {
