--- a/Views/Partials/BlockList/Components/block3.cshtml
+++ b/Views/Partials/BlockList/Components/block3.cshtml
@@ -1,5 +1,4 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<Product>
-@using Umbraco.Core.Models.Blocks;
+﻿@inherits UmbracoViewPage<Product>
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
     var content = (ContentModels.Block3)Model.Content;
