--- a/Views/Partials/BlockList/Components/block3.cshtml
+++ b/Views/Partials/BlockList/Components/block3.cshtml
@@ -1,8 +1,8 @@
 ﻿@inherits UmbracoViewPage<Product>
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
-    var content = (ContentModels.Block3)Model.Content;
     
-    @content
+    
+    @Model
 
 }
