Adding partial-view 'block3.cshtml'

--- a/Views/Partials/BlockList/Components/block3.cshtml
+++ b/Views/Partials/BlockList/Components/block3.cshtml
@@ -4,5 +4,5 @@
 @{
     var content = (ContentModels.Block3)Model.Content;
 
-    <h1>@content.Value("tituloProducto")</h1>
+    <h1>@content.Value("TituloProducto")</h1>
 }
