--- a/Views/Partials/BlockList/Components/block3.cshtml
+++ b/Views/Partials/BlockList/Components/block3.cshtml
@@ -5,4 +5,7 @@
     var content = (ContentModels.Block3)Model.Content;
 
     <h1>@content.Value("TituloProduto")</h1>
+    <h1>@content.Value("ProductsTreePicker")</h1>
+    
+    
 }
