Adding partial-view 'block3.cshtml'

--- a/Views/Partials/BlockList/Components/block3.cshtml
+++ b/Views/Partials/BlockList/Components/block3.cshtml
@@ -5,7 +5,13 @@
     var content = (ContentModels.Block3)Model.Content;
 
     <h1>@content.Value("TituloProduto")</h1>
-    <h1>@content.Value("ProductsTreePicker")</h1>
+    @*<h1>@content.Value("ProductsTreePicker")</h1>*@
+    
+    
+     @if (Model.ProductsTreePicker != null)
+            {
+                foreach (Product product in Model.FeaturedProducts)
+                {
     
     
 }
