--- a/Views/Partials/BlockList/Components/block3.cshtml
+++ b/Views/Partials/BlockList/Components/block3.cshtml
@@ -10,7 +10,7 @@
     
      @if (Model.ProductsTreePicker != null)
             {
-            
+            <p>aqui</p>
             }
     
     
