--- a/Views/Partials/BlockList/Components/block3.cshtml
+++ b/Views/Partials/BlockList/Components/block3.cshtml
@@ -8,7 +8,7 @@
     @*<h1>@content.Value("ProductsTreePicker")</h1>*@
     
     
-     @if (Model.ProductsTreePicker != null)
+     if (Model.ProductsTreePicker != null)
             {
             <p>aqui</p>
             }
