Adding partial-view 'Bloco3.cshtml'

--- a/Views/Partials/BlockList/Components/Bloco3.cshtml
+++ b/Views/Partials/BlockList/Components/Bloco3.cshtml
@@ -5,6 +5,6 @@
     var content = (ContentModels.Block3)Model.Content;
 
     <h1>@content.Value("TituloProduto")</h1>
-    <h1>@content.Value("ProductsTreePicker")</h1>
+    <h1>@content.TituloProduto</h1>
 
 }
