Adding partial-view 'Bloco3.cshtml'

--- a/Views/Partials/BlockList/Components/Bloco3.cshtml
+++ b/Views/Partials/BlockList/Components/Bloco3.cshtml
@@ -6,5 +6,7 @@
 
     <h1>@content.Value("TituloProduto")</h1>
     <h1>@content.ProductsTreePicker</h1>
+    
+    var lista = <Block3>content.ProductsTreePicker;
 
 }
