Adding partial-view 'Bloco3.cshtml'

--- a/Views/Partials/BlockList/Components/Bloco3.cshtml
+++ b/Views/Partials/BlockList/Components/Bloco3.cshtml
@@ -7,6 +7,6 @@
     <h1>@content.Value("TituloProduto")</h1>
     <h1>@content.ProductsTreePicker</h1>
     
-    var lista = <Block3>content.ProductsTreePicker;
+    var lista = (ContentModels.Block3)content.ProductsTreePicker;
 
 }
