Adding partial-view 'Bloco3.cshtml'

--- a/Views/Partials/BlockList/Components/Bloco3.cshtml
+++ b/Views/Partials/BlockList/Components/Bloco3.cshtml
@@ -8,7 +8,9 @@
     <h1>@content.ProductsTreePicker</h1>
     
     
-    foreach (var item in content
-    var lista = (ContentModels.Block3)content.ProductsTreePicker;
+    foreach (var product in Model.FeaturedProducts)
+    {
+
+    }
 
 }
