--- a/Views/Partials/BlockList/Components/Bloco3.cshtml
+++ b/Views/Partials/BlockList/Components/Bloco3.cshtml
@@ -8,7 +8,7 @@
     <h1>@content.ProductsTreePicker</h1>
     
     
-    foreach (var product in Model.FeaturedProducts)
+    foreach (var product in Model.ProductsTreePicker)
     {
 
     }
