Adding partial-view 'Bloco3.cshtml'

--- a/Views/Partials/BlockList/Components/Bloco3.cshtml
+++ b/Views/Partials/BlockList/Components/Bloco3.cshtml
@@ -10,7 +10,7 @@
     
     foreach (Product product in content.ProductsTreePicker)
     {
-        product.featuredName
+        product.ProductName
     }
 
 }
