Adding partial-view 'Bloco3.cshtml'

--- a/Views/Partials/BlockList/Components/Bloco3.cshtml
+++ b/Views/Partials/BlockList/Components/Bloco3.cshtml
@@ -11,6 +11,7 @@
     foreach (Product product in content.ProductsTreePicker)
     {
         var xpto = product.ProductName;
+        <p>@xpto</p>
     }
 
 }
