--- a/Views/Partials/BlockList/Components/Bloco3.cshtml
+++ b/Views/Partials/BlockList/Components/Bloco3.cshtml
@@ -10,8 +10,11 @@
     
     foreach (Product product in content.ProductsTreePicker)
     {
-        var xpto = product.ProductName;
-        <p>@xpto</p>
+        <p>@product.ProductName</p>
+        <p>@product.Price</p>
+        <p>@product.Category</p>
+        <p>@product.Description</p>
+        <p>@product.SKU</p>
     }
 
 }
