--- a/Views/Partials/BlockList/Components/Bloco3.cshtml
+++ b/Views/Partials/BlockList/Components/Bloco3.cshtml
@@ -12,7 +12,7 @@
     {
         <p>@product.ProductName</p>
         <p>@product.Price</p>
-        <p>@product.Category</p>
+        <p>@product.Category.ToString()</p>
         <p>@product.Description</p>
     }
 }
