Adding partial-view 'Bloco3.cshtml'

--- a/Views/Partials/BlockList/Components/Bloco3.cshtml
+++ b/Views/Partials/BlockList/Components/Bloco3.cshtml
@@ -10,8 +10,10 @@
     
     foreach (Product product in content.ProductsTreePicker)
     {
+        
+        <p>@product.DefaultCurrency</p>
         <p>@product.ProductName</p>
-        <p>@product.Price</p>
+
         <p>@product.Category.ToString()</p>
         <p>@product.Description</p>
     }
