Adding partial-view 'Bloco3.cshtml'

--- a/Views/Partials/BlockList/Components/Bloco3.cshtml
+++ b/Views/Partials/BlockList/Components/Bloco3.cshtml
@@ -13,6 +13,7 @@
         
         <p>@product.DefaultCurrency</p>
         <p>@product.ProductName</p>
+        <p>@product.Price</p>
         <p>@product.Category.ToString()</p>
         <p>@product.Description</p>
     }
