--- a/Views/Partials/BlockList/Components/Bloco3.cshtml
+++ b/Views/Partials/BlockList/Components/Bloco3.cshtml
@@ -14,7 +14,7 @@
         <p>@product.DefaultCurrency</p>
         <p>@product.ProductName</p>
         <p>@product.Price</p>
-        <p>@product.Category</p>
+        <p>@product.Category.Value()</p>
         <p>@product.Description</p>
     }
 }
