Adding partial-view 'Bloco3.cshtml'

--- a/Views/Partials/BlockList/Components/Bloco3.cshtml
+++ b/Views/Partials/BlockList/Components/Bloco3.cshtml
@@ -12,6 +12,6 @@
         <p>@product.ProductName</p>
         <p>@product.Price</p>
         <p>@product.Description</p>
-         <img class=src="@product.Photos.Url" alt="@product.ProductName image" />
+         <img src="@product.Photos.Url" alt="@product.ProductName image" />
     }
 }
