Adding partial-view 'Bloco3.cshtml'

--- a/Views/Partials/BlockList/Components/Bloco3.cshtml
+++ b/Views/Partials/BlockList/Components/Bloco3.cshtml
@@ -15,3 +15,8 @@
          <img src="@product.Photos.Url" alt="@product.ProductName image" />
     }
 }
+
+   <form action="/search/" method="GET">
+        <input type="text" placeholder="Search..." name="query">
+        <button>Search</button>
+    </form>
